--- a/checkout.html
+++ b/checkout.html
@@ -499,7 +499,7 @@
         </div>
     </section>
 
-    <!-- Payment Method -->
+    <!-- Payment Method -->>
     <section class="form-section">
         <h2 class="section-title">Payment Method</h2>
         <div class="payment-options">
