--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>All-En Sign-In</title>
-  <link rel="stylesheet" href="signup.css">
+  <link rel="stylesheet" href="signin.css">
 </head>
 <body>
 
@@ -22,9 +22,23 @@
   </div>
   <div class="cart-icons">
     <img src="images/Cart.png" alt="Wishlist" style="cursor: pointer;">
-    <img src="images/signin.png" alt="Cart" style="cursor: pointer;">
   </div>
 </header>
+
+<div class="cart-content" id="cartContent">
+  <div class="cart-inner">
+    <h2 style="font-size: 24px; font-weight: 600; margin-bottom: 20px;">Your Bag is empty.</h2>
+    <p><a href="signin.html" style="color: blue; text-decoration: underline;">Sign in</a> to see if you have any saved items</p>
+    <div style="margin-top: 30px;">
+      <h3 style="font-size: 18px; font-weight: 600; margin-bottom: 10px;">My Profile</h3>
+      <ul style="list-style: none; padding-left: 0; line-height: 2;">
+        <li><a href="cart.html" style="color: black; text-decoration: none">🧾 Orders</a></li>
+        <li><a href="#" style="color: black; text-decoration: none">👤 Account</a></li>
+        <li><a href="signin.html" style="color: black; text-decoration: none">🔐 Sign in</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 
 <div class="divider"></div>
 
