--- a/qr.html
+++ b/qr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All-En Checkout</title>
+    <title>All-En Collection QR Code</title>
     <style>
         * {
             box-sizing: border-box;
@@ -14,9 +14,6 @@
 
         body {
             background-color: #ffffff;
-            color: #000000;
-            font-size: 16px;
-            line-height: 1.5;
         }
 
         .header {
@@ -147,134 +144,24 @@
             margin: 0 4px;
         }
 
-        /* Main Content */
         .main-content {
-            padding: 20px 100px;
-            max-width: 1240px;
-            margin: 0 auto;
-        }
-
-        .page-title {
-            font-size: 32px;
-            font-weight: 700;
-            line-height: 48px;
-            color: #000000;
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        .form-section {
-            margin-bottom: 40px;
-        }
-
-        .section-title {
-            font-size: 20px;
-            font-weight: 700;
-            line-height: 30px;
-            color: #000000;
-            margin-bottom: 20px;
-        }
-
-        .form-row {
             display: flex;
-            gap: 50px;
-            margin-bottom: 20px;
-        }
-
-        .form-group {
-            flex: 1;
-        }
-
-        .form-label {
-            display: block;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 24px;
-            color: #000000;
-            margin-bottom: 8px;
-        }
-
-        .form-control {
-            width: 100%;
-            height: 48px;
-            background-color: #efefef;
-            border: none;
-            border-radius: 24px;
-            padding: 0 16px;
-            font-size: 16px;
-            color: rgba(0, 0, 0, 0.4);
-            outline: none;
-        }
-
-        .form-control:focus {
-            box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Payment Method */
-        .payment-options {
-            margin-top: 20px;
-        }
-
-        .payment-option {
-            display: flex;
+            flex-direction: column;
             align-items: center;
-            gap: 12px;
-            margin-bottom: 16px;
-        }
-
-        .payment-radio {
-            appearance: none;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            background-color: #000000;
-            position: relative;
-            cursor: pointer;
-        }
-
-        .payment-radio:checked::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background-color: #ffffff;
-        }
-
-        .payment-label {
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 24px;
-            color: #000000;
-        }
-
-        /* Checkout Button */
-        .checkout-btn-container {
-            display: flex;
             justify-content: center;
-            margin-top: 40px;
+            padding: 40px 0 80px;
         }
 
-        .checkout-btn {
-            background-color: #000000;
-            color: #ffffff;
-            border: none;
-            border-radius: 24px;
-            padding: 12px 20px;
-            font-size: 16px;
-            font-weight: 500;
-            line-height: 24px;
-            cursor: pointer;
-            width: 119px;
-            height: 48px;
-            transition: background-color 0.3s;
+        #countdown{
+            margin-top: 20px;
+            font-size: 18px;
+            text-align: center;
         }
 
-        .checkout-btn:hover {
-            background-color: #333333;
+
+        .qr-code {
+            width: 430px;
+            height: 430px;
         }
 
         .footer {
@@ -439,10 +326,11 @@
                 gap: 40px;
             }
         }
+
     </style>
 </head>
 <body>
-<!-- Header -->
+
 <header class="header">
     <div class="logo">All-En</div>
     <nav class="nav">
@@ -485,55 +373,12 @@
     <span>Checkout</span>
 </div>
 
-<!-- Main Content -->
-<main class="main-content">
-    <h1 class="page-title">Checkout</h1>
 
-    <!-- Recipient Information -->
-    <section class="form-section">
-        <h2 class="section-title">Recipient information</h2>
-        <div class="form-row">
-            <div class="form-group">
-                <label for="recipientUsername" class="form-label">Name</label>
-                <input type="text" id="recipientUsername" class="form-control" placeholder="Username" required>
-            </div>
-            <div class="form-group">
-                <label for="recipientPhone" class="form-label">Phone Number</label>
-                <input type="tel" id="recipientPhone" class="form-control" placeholder="Phone Number" required>
-            </div>
-            <div class="form-group">
-                <label for="recipientEmail" class="form-label">Email</label>
-                <input type="email" id="recipientEmail" class="form-control" placeholder="Email" required>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group">
-                <label for="recipientAddress" class="form-label">Address</label>
-                <input type="text" id="recipientAddress" class="form-control" placeholder="Address" required>
-            </div>
-        </div>
-    </section>
+<div class="main-content">
+    <h2 id="countdown"></h2>
+    <img src="qr/taiwanpay.png" alt="QR Code" class="qr-code">
+</div>
 
-    <!-- Payment Method -->
-    <section class="form-section">
-        <h2 class="section-title">Payment Method</h2>
-        <div class="payment-options">
-            <div class="payment-option">
-                <input type="radio" id="linePay" name="paymentMethod" class="payment-radio" checked>
-                <label for="taiwanPay" class="payment-label">Line pay</label>
-                <input type="radio" id="taiwanPay" name="paymentMethod" class="payment-radio" checked>
-                <label for="taiwanPay" class="payment-label">Taiwan Pay</label>
-            </div>
-        </div>
-    </section>
-
-    <!-- Checkout Button -->
-    <div class="checkout-btn-container">
-        <button type="button" class="checkout-btn" id="checkoutBtn">Checkout</button>
-    </div>
-</main>
-
-<!-- Footer -->
 <footer class="footer">
     <div class="footer-top">
         <div>
@@ -606,14 +451,87 @@
 </footer>
 
 <script>
-    //logo click will redirect to home page
-    document.querySelector('.logo').addEventListener('click', function() {
-        window.location.href = 'homepage.html';
-    });
+    const countdownEl = document.getElementById('countdown');
+    const redirectUrl = 'homepage.html';
+    const duration = 300 * 1000; // 5 menit dalam milidetik
 
-    // Form validation
-    const checkoutBtn = document.getElementById('checkoutBtn');
-    const formInputs = document.querySelectorAll('.form-control');
+    // Cek apakah sudah ada waktu mulai di localStorage
+    let startTime = localStorage.getItem('paymentStartTime');
+    if (!startTime) {
+        startTime = Date.now();
+        localStorage.setItem('paymentStartTime', startTime);
+    } else {
+        startTime = parseInt(startTime);
+    }
+
+    const timer = setInterval(() => {
+        const elapsed = Date.now() - startTime;
+        const timeLeft = Math.floor((duration - elapsed) / 1000);
+
+        if (timeLeft <= 0) {
+            clearInterval(timer);
+            localStorage.removeItem('paymentStartTime'); // bersihkan localStorage
+            window.location.href = redirectUrl;
+        } else {
+            const minutes = Math.floor(timeLeft / 60);
+            const seconds = timeLeft % 60;
+            countdownEl.textContent = `You have ${minutes}:${seconds.toString().padStart(2, '0')} to complete the payment`;
+        }
+    }, 1000);
+
+    function closeBanner() {
+        document.querySelector('.promo-banner').style.display = 'none';
+    }
+
+    // Shop dropdown functionality
+    document.addEventListener('DOMContentLoaded', function() {
+        const shopLink = document.querySelector('.nav-link');
+
+        shopLink.addEventListener('click', function(e) {
+            e.preventDefault();
+            alert('Shop categories dropdown would appear here');
+        });
+
+        // Search functionality
+        const searchInput = document.querySelector('.search-input');
+
+        searchInput.addEventListener('keypress', function(e) {
+            if (e.key === 'Enter') {
+                alert('Searching for: ' + searchInput.value);
+            }
+        });
+
+        // Cart and profile icons
+        const cartIcon = document.querySelector('.cart-icon');
+        const profileIcon = document.querySelector('.profile-icon');
+
+        cartIcon.addEventListener('click', function() {
+            alert('Cart page would open here');
+        });
+
+        profileIcon.addEventListener('click', function() {
+            alert('Profile page would open here');
+        });
+
+        // Footer links
+        const footerLinks = document.querySelectorAll('.footer-link');
+
+        footerLinks.forEach(link => {
+            link.addEventListener('click', function(e) {
+                e.preventDefault();
+                alert('Navigating to: ' + link.textContent);
+            });
+        });
+
+        // Social media icons
+        const socialIcons = document.querySelectorAll('.social-icon');
+
+        socialIcons.forEach(icon => {
+            icon.addEventListener('click', function() {
+                alert('Opening social media page');
+            });
+        });
+    });
 
     const cartIcon = document.querySelector('.cart-icons');
     const cartContent = document.getElementById('cartContent');
@@ -627,55 +545,6 @@
     cartContent.addEventListener('mouseleave', () => {
         cartContent.classList.remove('active');
     });
-
-
-    checkoutBtn.addEventListener('click', function() {
-        let isValid = true;
-
-        formInputs.forEach(input => {
-            if (!input.value.trim()) {
-                input.style.boxShadow = '0 0 0 2px rgba(255, 0, 0, 0.3)';
-                isValid = false;
-            } else {
-                input.style.boxShadow = '';
-            }
-        });
-
-        if (isValid) {
-            window.location.href = 'qr.html';
-        } else {
-            alert('Please fill in all required fields.');
-        }
-    });
-
-    // Reset validation styling on input
-    formInputs.forEach(input => {
-        input.addEventListener('input', function() {
-            this.style.boxShadow = '';
-        });
-    });
-
-    // Navigation functionality
-    // const navLinks = document.querySelectorAll('.nav-link, .breadcrumb a, .footer-link');
-    //
-    // navLinks.forEach(link => {
-    //     link.addEventListener('click', function(e) {
-    //         e.preventDefault();
-    //         alert(`Navigating to: ${this.textContent.trim()}`);
-    //     });
-    // });
-
-    // Search functionality
-    const searchInput = document.querySelector('.search-bar input');
-
-    searchInput.addEventListener('keypress', function(e) {
-        if (e.key === 'Enter') {
-            alert(`Searching for: ${this.value}`);
-        }
-    });
-
-
-
 </script>
 </body>
 </html>
