--- a/signup.html
+++ b/signup.html
@@ -27,9 +27,23 @@
     </div>
     <div class="cart-icons">
         <img src="images/Cart.png" alt="Wishlist" style="cursor: pointer;">
-        <img src="images/signin.png" alt="Cart" style="cursor: pointer;">
     </div>
 </header>
+
+<div class="cart-content" id="cartContent">
+    <div class="cart-inner">
+        <h2 style="font-size: 24px; font-weight: 600; margin-bottom: 20px;">Your Bag is empty.</h2>
+        <p><a href="signin.html" style="color: blue; text-decoration: underline;">Sign in</a> to see if you have any saved items</p>
+        <div style="margin-top: 30px;">
+            <h3 style="font-size: 18px; font-weight: 600; margin-bottom: 10px;">My Profile</h3>
+            <ul style="list-style: none; padding-left: 0; line-height: 2;">
+                <li><a href="cart.html" style="color: black; text-decoration: none">🧾 Orders</a></li>
+                <li><a href="#" style="color: black; text-decoration: none">👤 Account</a></li>
+                <li><a href="signin.html" style="color: black; text-decoration: none">🔐 Sign in</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
 
 <div class="divider"></div>
 
@@ -44,11 +58,48 @@
 <main class="main-content">
     <h1 class="signup-title">Sign-Up</h1>
 
-    <form class="form-container">
-        <input type="text" class="input-field" placeholder="Username" required>
-        <input type="password" class="input-field" placeholder="Password" required>
+    <form id="signUpForm" class="form-container">
+        <!-- Login -->
+        <input type="text" name="username" class="input-field" placeholder="Username" required>
+        <input type="password" name="password" class="input-field" placeholder="Password" required>
+
+        <!-- Sign Up Details -->
+        <section class="form-section">
+            <div class="form-row">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" name="name" class="form-control" placeholder="Name" required>
+                </div>
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="tel" name="phone" class="form-control" placeholder="Phone Number" required>
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" name="email" class="form-control" placeholder="Email" required>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label>Country</label>
+                    <input type="text" name="country" class="form-control" placeholder="Country" required>
+                </div>
+                <div class="form-group">
+                    <label>City</label>
+                    <input type="text" name="city" class="form-control" placeholder="City" required>
+                </div>
+                <div class="form-group">
+                    <label>Address</label>
+                    <input type="text" name="address" class="form-control" placeholder="Address" required>
+                </div>
+            </div>
+        </section>
+
         <button type="submit" class="create-account-btn">Create Account</button>
     </form>
+
+
+
 
     <a href="signin.html" class="signin-link">Already have an account? Click here</a>
 </main>
